--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: Niall Byrne
   description: Ansible role that fetches remote content and places in a configurable location.
   company: Shared Vision Solutions
-  license: MPL-2
+  license: MIT
   platforms:
     - name: MacOSX
       versions:
