style(ANSIBLE-LINT): enforce fqcn

--- a/molecule/downloads/converge.yml
+++ b/molecule/downloads/converge.yml
@@ -4,7 +4,7 @@
   connection: local
   tasks:
     - name: Load Scenario Variables
-      include_vars: vars/main.yml
+      ansible.builtin.include_vars: vars/main.yml
     - name: "Include osx_provisioner.downloader"
       ansible.builtin.include_role:
         name: "osx_provisioner.downloader"
