--- a/molecule/downloads/cleanup.yml
+++ b/molecule/downloads/cleanup.yml
@@ -4,9 +4,9 @@
   gather_facts: false
   tasks:
     - name: Load Scenario Variables
-      include_vars: vars/main.yml
+      ansible.builtin.include_vars: vars/main.yml
     - name: Clean Up
-      file:
+      ansible.builtin.file:
         path: "{{ download_save_location }}/{{ item.name }}"
         state: absent
       loop: "{{ download_remote_urls }}"
